--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,42 +25,24 @@
     android:text="@string/action_sign_in"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.491"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/password"
-    app:layout_constraintVertical_bias="0.2"/>
-
+    app:layout_constraintTop_toBottomOf="@+id/providerNumber"
+    app:layout_constraintVertical_bias="0.064"/>
   <EditText
-    android:id="@+id/password"
+    android:id="@+id/providerNumber"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="232dp"
     android:layout_marginStart="24dp"
     android:layout_marginEnd="24dp"
 
-    android:hint="@string/prompt_password"
-    android:imeActionLabel="@string/action_sign_in_short"
-    android:imeOptions="actionDone"
-    android:inputType="textPassword"
-    android:selectAllOnFocus="true"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/username"/>
-
-  <EditText
-    android:id="@+id/username"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="96dp"
-    android:layout_marginStart="24dp"
-    android:layout_marginEnd="24dp"
-
-    android:hint="@string/prompt_email"
-    android:inputType="textEmailAddress"
+    android:hint="@string/prompt_provider_number"
+    android:inputType="text|number"
     android:selectAllOnFocus="true"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
-
   <ProgressBar
     android:id="@+id/loading"
     android:layout_width="wrap_content"
@@ -72,8 +54,15 @@
     android:layout_gravity="center"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="@+id/password"
-    app:layout_constraintStart_toStartOf="@+id/password"
+    app:layout_constraintEnd_toEndOf="@+id/providerNumber"
+    app:layout_constraintStart_toStartOf="@+id/providerNumber"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.3"/>
+  <ImageView
+    android:id="@+id/imageView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:srcCompat="@drawable/logo_final"
+    tools:layout_editor_absoluteX="137dp"
+    tools:layout_editor_absoluteY="89dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
