--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#449af5</color>
-  <color name="colorPrimaryDark">#18276e</color>
-  <color name="colorPrimaryCenter">#214D9E</color>
+  <color name="colorPrimary">#8BC34A</color>
+  <color name="colorPrimaryDark">#009688</color>
+  <color name="colorPrimaryCenter">#4CAF50</color>
   <color name="colorAccent">#FFFF</color>
 </resources>
